--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,3 +8,31 @@
       @apply  text-Pgreen;
     }
   }
+/*
+  .cursor{
+    z-index: 999;
+    position: fixed;
+    background: #2fbf71;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    pointer-events: none;
+    box-shadow: 0 0 20px #2fbf71,
+                0 0 60px #2fbf71,
+                0 0 100px #2fbf71;
+    transform: translate(-30%, -30%);
+    display: none;
+  }
+  
+  
+  .cursor:before{
+    content: '';
+    position: absolute;
+    background: #2fbf71;
+    width: 50px;
+    height: 50px;
+    opacity: 0.2;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+  }
+      */
